No render in VP9 lossless mode #74443

Closed
opened 2020-03-04 19:37:00 +01:00 by forceengine · 11 comments

System Information

  • OS: Win 7
  • Graphics card: AMD Radeon HD 5800 Series

Blender Version

  • Version: 2.82

Short description of error
I wanted to export a video with

  • Container: WebM
  • Video Codec: WebM/VP9
  • Output Quality: Lossless

Exact steps for others to reproduce the error

  • Ctrl + F12 to render animation

vp9 lossless error.png

Image:

  • Red Box: Render/Output video. I never get any view of the actual scene
  • Blue Box: Setting (the only thing you set as above)
  • Green Arrow: The error message "CQ level 0 must be between minimum and maximum quantizer value (2-31)"

I thought it might be the 4K size or the other setting, but it seems that blender does not like the lossless since perceptually lossless with the same setting works as expected. I also check it with cycles, since my GPU is rather old. Cycles is the same problem.

Blender file
VP9 no lossless.blend

You don't even have to use the video editor. blender seems to have the same problem in the dafault 3D view when you press Ctrl + F12

**System Information** * OS: Win 7 * Graphics card: AMD Radeon HD 5800 Series **Blender Version** * Version: 2.82 **Short description of error** I wanted to export a video with * Container: WebM * Video Codec: WebM/VP9 * Output Quality: Lossless **Exact steps for others to reproduce the error** * Ctrl + F12 to render animation ![vp9 lossless error.png](https://archive.blender.org/developer/F8388318/vp9_lossless_error.png) Image: * Red Box: Render/Output video. I never get any view of the actual scene * Blue Box: Setting (the only thing you set as above) * Green Arrow: The error message "CQ level 0 must be between minimum and maximum quantizer value (2-31)" I thought it might be the 4K size or the other setting, but it seems that blender does not like the *lossless* since *perceptually lossless* with the same setting works as expected. I also check it with cycles, since my GPU is rather old. Cycles is the same problem. **Blender file** [VP9 no lossless.blend](https://archive.blender.org/developer/F8388317/VP9_no_lossless.blend) You don't even have to use the video editor. blender seems to have the same problem in the dafault 3D view when you press Ctrl + F12
Author

Added subscriber: @forceengine

Added subscriber: @forceengine
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Please share a simple blend file with external resources if any that helps redoing the bug

Please share a simple blend file with external resources if any that helps redoing the bug
Member

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Author

I wondered if VP9 really has a lossless mode. Wikipedia says "VP9 is customized for video resolutions greater than 1080p (such as UHD) and also enables lossless compression."

ffmpeg.org says "libvpx-vp9*has a lossless encoding mode// that can be activated using -lossless 1"

Lossless code:

ffmpeg -i input.mp4 -c:v libvpx-vp9 -lossless 1 output.webm
  • Constanat Quality (CQ):
ffmpeg -i input.mp4 -c:v libvpx-vp9 -crf 30 -b:v 0 output.webm
  • Constrained Quality (also CQ as shortcut):
ffmpeg -i input.mp4 -c:v libvpx-vp9 -crf 30 -b:v 2000k output.webm

or

ffmpeg -i input.mp4 -c:v libvpx-vp9 -minrate 500k -b:v 2000k -maxrate 2500k output.webm

I have no idea, but could it be that simple that the lossless mode tries to pass arguments using one of the CQ-ways. This would explain why it can not work.

I wondered if VP9 really has a lossless mode. Wikipedia says "VP9 is customized for video resolutions greater than 1080p (such as UHD) and also enables *lossless compression*." [ffmpeg.org ](https:*trac.ffmpeg.org/wiki/Encode/VP9#LosslessVP9) says "libvpx-vp9*has a lossless encoding mode// that can be activated using -lossless 1" **Lossless code:** ``` ffmpeg -i input.mp4 -c:v libvpx-vp9 -lossless 1 output.webm ``` * **Constanat Quality (CQ):** ``` ffmpeg -i input.mp4 -c:v libvpx-vp9 -crf 30 -b:v 0 output.webm ``` * **Constrained Quality (also CQ as shortcut):** ``` ffmpeg -i input.mp4 -c:v libvpx-vp9 -crf 30 -b:v 2000k output.webm ``` or ``` ffmpeg -i input.mp4 -c:v libvpx-vp9 -minrate 500k -b:v 2000k -maxrate 2500k output.webm ``` I have no idea, but could it be that simple that the lossless mode tries to pass arguments using one of the CQ-ways. This would explain why it can not work.

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

This issue was referenced by 98689f51c0

This issue was referenced by 98689f51c01141da83fb3e592dd4f4cdc75750d4
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Not exactly sure if we should use lossless mode, but rendering should definitely not fail.

Not exactly sure if we should use `lossless` mode, but rendering should definitely not fail.
Philipp Oeser self-assigned this 2020-05-22 15:26:44 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74443
No description provided.